#247 - login - vertical align & scroll fix

--- a/src/sass/_app-global.scss
+++ b/src/sass/_app-global.scss
@@ -155,6 +155,10 @@ fieldset {
   vertical-align: sub;
 }
 
+.app-m-auto {
+  margin: auto;
+}
+
 .app-rotate-up {
   .mat-icon {
     &:not(.app-no-rotate) {
